rnsc/tests/snapshots/error-parser-outside_class_directive-after_class_dir-string_literal.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class public EmptyClass
.super java/lang/Object

.class_end
"Hello World"
----- STDERR -----
[E-008] Error: unexpected identifier after class definition
   ╭─[ test_data/rns_integration/error/parser/outside_class_directive/after_class_dir/string_literal.rns:5:1 ]
   │
 5 │ "Hello World"
   │ ──────┬──────  
   │       ╰──────── valid context for Hello World identifier is: 'operand'.
   │ 
   │ Help: Ensure all code is declared inside a '.class' directive.
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-008
───╯
----- HASH -----
not generated
